--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
 margin: 0;
 padding: 0;
-background-image: url("https://arsmke.com/wp-content/uploads/2018/03/Doctor-Background.jpg");
+background-color: skyblue;
 box-sizing: content-box;
 font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
