--- a/Assignment 3/style.css
+++ b/Assignment 3/style.css
@@ -1,100 +1,142 @@
+/* Base Styles */
+
+* {
+	box-sizing: border-box;
+}
+
+h1 {
+	font-family: Brushstroke, fantasy;
+	color: #000000;
+}
+
 body {
-    font-size: 16px;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #1a1a1a;
-    background-color: black;
+	background-image: url("background.jpg");
+	background-color:black;
+
+}
+
+p {
+	padding: 10px;
+	margin: 0;
+}
+
+.container {
+	border: none;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
+}
+
+section {
+	border:	1px solid black;
+	background-color: #00FF99;
+	width: 100%;
+	height: auto;
+	font-family: Helvetica;
+	color: black;
+	position: relative;
+	overflow: auto;
+}
+
+#chicken {
+	border: 2px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 30%;
+	font-family: 'Courier New', Courier, monospace;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+	background-color:red;
+}
+
+#beef {
+	border: 2px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 30%;
+	font-family: 'Courier New', Courier, monospace;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 5px;
+	background-color: #FF1439;
+}
+
+#sushi {
+	border: 2px solid black;
+	text-align: center;
+	width: 30%;
+	margin-left: 30%;
+	font-family: 'Courier New', Courier, monospace;
+	font-weight: bold;
+	font-size: 125%;
+	margin-bottom: 0;
+	margin-top: 0;
+	background-color:red;
+	color: white;
+	padding: 5px;
+}
+
+#chicken-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+#beef-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+#sushi-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.navbar-brand {
+  font-size: 2em;
+  border: 0 0 10px 10px;
+  color: #FFFFFF;
 }
 
 #header-nav {
-    background-color: red;
-    border-radius: 0;
-    border: 0;
-}
-
-#header-nav button {
-    margin-top: 22px;
-}
-
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
-    background-color:orange;
-}
-
-.navbar-collapse {
-    border-top: 0;
-}
-
-.navbar-brand, .navbar-nav li a {
-    line-height: 76px;
-    height: 30px;
-    padding-top: 0;
-    text-align: center;
-}
-
-.navbar-brand h1 {
-    color: black;
-    font-family: 'Abril Fatface', cursive;
-    font-weight: bolder;
-    font-size: 1.8em;
-}
-
-.navbar-brand a:hover {
-    text-decoration: none;
-    text-shadow: 1px 1px 1px #fe9797;
-}
-
-#nav-list {
-    background-color: #e4af34;
-}
-
-#nav-list a {
-    font-weight: bolder;
-    color: red;
-    font-size: 1.2em;
-}
-
-#nav-list a:hover {
-    color: #202020;
-    background-color: #fce29e;
+  border: 0;
+  background-color: red;
+  color: #FFFFFF;
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-    border: 1px solid #7d1913;
+  border: 1px solid #61122f;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
 }
 
-
-/** END HEADER */
-
-
-/** HOME PAGE **/
-
-#main-content {
-    width: 92%;
-    margin-bottom: 40px;
+.nav-header {
+  background-color: #FFFFFF;
 }
 
-#main-content h2 {
-    font-size: 2.9em;
-    font-weight: bold;
-    margin-top: 30px;
-    margin-bottom: 50px;
-    border: solid red;
+.nav-brand {
+  color: #FFFFFF;
+  font-size: 1.5em;
 }
 
-#main-content h3 {
-    font-size: 1.6em;
-    font-weight: bold;
-    margin-bottom: 1em;
-    color:red;
-    
+#nav-list {
+  color: white;
 }
 
-#main-section {
-    background-color: pink;
-    box-shadow: 0 0 50px yellow;
-    padding: 30px;
+hr {
+  border-color: white;
 }
-p
-{
-border: solid black;
-background-color: coral;
+
+.item {
+  color:black;
+  font-size: 1.2em;
+  font-weight:bold;
 }
